downloaded_docs/lightweight-charts/docs/3.8/api/interfaces/PriceLineOptions.md
Version: 3.8

On this page

Represents a price line options.

## Properties[​](#properties "Direct link to Properties")

### price[​](#price "Direct link to price")

> **price**: `number`

Price line's value.

#### Default Value[​](#default-value "Direct link to Default Value")

`0`

---

### color[​](#color "Direct link to color")

> **color**: `string`

Price line's color.

#### Default Value[​](#default-value-1 "Direct link to Default Value")

`''`

---

### lineWidth[​](#linewidth "Direct link to lineWidth")

> **lineWidth**: [`LineWidth`](/lightweight-charts/docs/3.8/api/type-aliases/LineWidth)

Price line's width in pixels.

#### Default Value[​](#default-value-2 "Direct link to Default Value")

`1`

---

### lineStyle[​](#linestyle "Direct link to lineStyle")

> **lineStyle**: [`LineStyle`](/lightweight-charts/docs/3.8/api/enumerations/LineStyle)

Price line's style.

#### Default Value[​](#default-value-3 "Direct link to Default Value")

```prism-code
{@link LineStyle.Solid}
```

---

### lineVisible[​](#linevisible "Direct link to lineVisible")

> **lineVisible**: `boolean`

Display line.

#### Default Value[​](#default-value-4 "Direct link to Default Value")

`true`

---

### axisLabelVisible[​](#axislabelvisible "Direct link to axisLabelVisible")

> **axisLabelVisible**: `boolean`

Display the current price value in on the price scale.

#### Default Value[​](#default-value-5 "Direct link to Default Value")

`true`

---

### title[​](#title "Direct link to title")

> **title**: `string`

Price line's on the chart pane.

#### Default Value[​](#default-value-6 "Direct link to Default Value")

`''`